Enhance HAL Link support
