# credentials/api/openapi.yaml
@@ -2523,23 +2523,10 @@ components:
       description: Uncaught error occurred.  Platform outage
   schemas:
     LinksHATEOAS:
-      additionalProperties: true
-      example:
-        next:
-          href: https://openapi-generator.tech
-        self:
-          href: https://openapi-generator.tech
-      properties:
-        self:
-          $ref: '#/components/schemas/LinksHATEOAS_self'
-        next:
-          $ref: '#/components/schemas/LinksHATEOAS_next'
+      additionalProperties:
+        $ref: '#/components/schemas/LinksHATEOAS_value'
       readOnly: true
       type: object
-    LinksHATEOASHref:
-      description: The URI of the resource.
-      format: uri
-      type: string
     EnumCredentialTypeManagementMode:
       description: Specifies the mechanism used to manage the lifecycle of the credential
         type.
@@ -2616,9 +2603,7 @@ components:
           id: id
         siteUrl: siteUrl
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         applicationInstance:
           id: id
@@ -2628,7 +2613,10 @@ components:
         updatedAt: 2000-01-23T04:56:07.000+00:00
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         applicationInstance:
           $ref: '#/components/schemas/CredentialIssuerProfile_applicationInstance'
         createdAt:
@@ -2768,9 +2756,7 @@ components:
           textColor: textColor
           version: 1
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         issuerName: issuerName
         cardType: cardType
@@ -2793,7 +2779,10 @@ components:
         updatedAt: 2000-01-23T04:56:07.000+00:00
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         cardDesignTemplate:
           description: A string that specifies an SVG formatted image containing placeholders
             for the credential fields that need to be displayed in the image.
@@ -2884,16 +2873,17 @@ components:
           update: null
           revoke: null
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         id: id
         status: null
         updatedAt: 2000-01-23T04:56:07.000+00:00
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         automation:
           $ref: '#/components/schemas/CredentialIssuanceRule_automation'
         createdAt:
@@ -3057,16 +3047,17 @@ components:
         application:
           id: id
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         name: name
         id: id
         updatedAt: 2000-01-23T04:56:07.000+00:00
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         application:
           $ref: '#/components/schemas/ObjectApplication'
         appOpenUrl:
@@ -3147,9 +3138,7 @@ components:
         application:
           id: id
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         pairingSession:
           createdAt: 2000-01-23T04:56:07.000+00:00
@@ -3171,7 +3160,10 @@ components:
         status: status
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         application:
           $ref: '#/components/schemas/CredentialDigitalWallet_application'
         createdAt:
@@ -3226,9 +3218,7 @@ components:
         credential:
           id: id
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         id: id
         walletActions:
@@ -3241,7 +3231,10 @@ components:
         status: status
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         claimReference:
           $ref: '#/components/schemas/ProvisionedCredential_claimReference'
         createdAt:
@@ -3318,9 +3311,7 @@ components:
         environment:
           id: id
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         id: id
         user:
@@ -3330,7 +3321,10 @@ components:
         updatedAt: 2000-01-23T04:56:07.000+00:00
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         createdAt:
           format: date-time
           readOnly: true
@@ -3362,9 +3356,7 @@ components:
       example:
         size: 6.027456183070403
         _links:
-          next:
-            href: https://openapi-generator.tech
-          self:
+          key:
             href: https://openapi-generator.tech
         _embedded:
           digitalWalletApplications:
@@ -3376,9 +3368,7 @@ components:
             application:
               id: id
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             name: name
             id: id
@@ -3391,9 +3381,7 @@ components:
             application:
               id: id
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             name: name
             id: id
@@ -3484,9 +3472,7 @@ components:
             application:
               id: id
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             pairingSession:
               createdAt: 2000-01-23T04:56:07.000+00:00
@@ -3548,9 +3534,7 @@ components:
             application:
               id: id
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             pairingSession:
               createdAt: 2000-01-23T04:56:07.000+00:00
@@ -3599,9 +3583,7 @@ components:
               update: null
               revoke: null
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             id: id
             status: null
@@ -3634,9 +3616,7 @@ components:
               update: null
               revoke: null
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             id: id
             status: null
@@ -3665,9 +3645,7 @@ components:
             credential:
               id: id
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             id: id
             walletActions:
@@ -3698,9 +3676,7 @@ components:
             credential:
               id: id
             _links:
-              next:
-                href: https://openapi-generator.tech
-              self:
+              key:
                 href: https://openapi-generator.tech
             id: id
             walletActions:
@@ -3713,7 +3689,10 @@ components:
             status: status
       properties:
         _links:
-          $ref: '#/components/schemas/LinksHATEOAS'
+          additionalProperties:
+            $ref: '#/components/schemas/LinksHATEOAS_value'
+          readOnly: true
+          type: object
         _embedded:
           $ref: '#/components/schemas/EntityArray__embedded'
         size:
@@ -3794,25 +3773,12 @@ components:
             $ref: '#/components/schemas/P1Error_details_inner'
           type: array
       type: object
-    LinksHATEOAS_self:
-      description: An object that describes the current resource.
+    LinksHATEOAS_value:
       example:
         href: https://openapi-generator.tech
       properties:
         href:
-          description: The URI of the resource.
-          format: uri
-          type: string
-      type: object
-    LinksHATEOAS_next:
-      description: An object that describes the next page of results. This property
-        is present only if there is a next page of results and the `limit` parameter
-        is used.
-      example:
-        href: https://openapi-generator.tech
-      properties:
-        href:
-          description: The URI of the resource.
+          description: The HREF of the link.
           format: uri
           type: string
       type: object
@@ -4396,9 +4362,7 @@ components:
           application:
             id: id
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           name: name
           id: id
@@ -4411,9 +4375,7 @@ components:
           application:
             id: id
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           name: name
           id: id
@@ -4504,9 +4466,7 @@ components:
           application:
             id: id
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           pairingSession:
             createdAt: 2000-01-23T04:56:07.000+00:00
@@ -4568,9 +4528,7 @@ components:
           application:
             id: id
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           pairingSession:
             createdAt: 2000-01-23T04:56:07.000+00:00
@@ -4619,9 +4577,7 @@ components:
             update: null
             revoke: null
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           id: id
           status: null
@@ -4654,9 +4610,7 @@ components:
             update: null
             revoke: null
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           id: id
           status: null
@@ -4685,9 +4639,7 @@ components:
           credential:
             id: id
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           id: id
           walletActions:
@@ -4718,9 +4670,7 @@ components:
           credential:
             id: id
           _links:
-            next:
-              href: https://openapi-generator.tech
-            self:
+            key:
               href: https://openapi-generator.tech
           id: id
           walletActions:
