# management/model_custom_domain.go
@@ -19,7 +19,7 @@ var _ MappedNullable = &CustomDomain{}
 
 // CustomDomain struct for CustomDomain
 type CustomDomain struct {
-	Links *LinksHATEOAS `json:"_links,omitempty"`
+	Links *map[string]LinksHATEOASValue `json:"_links,omitempty"`
 	Certificate *CustomDomainCertificate `json:"certificate,omitempty"`
 	// A string that specifies the domain name that should be used as the value of the CNAME record in the customer’s DNS.
 	CanonicalName *string `json:"canonicalName,omitempty"`
@@ -50,9 +50,9 @@ func NewCustomDomainWithDefaults() *CustomDomain {
 }
 
 // GetLinks returns the Links field value if set, zero value otherwise.
-func (o *CustomDomain) GetLinks() LinksHATEOAS {
+func (o *CustomDomain) GetLinks() map[string]LinksHATEOASValue {
 	if o == nil || IsNil(o.Links) {
-		var ret LinksHATEOAS
+		var ret map[string]LinksHATEOASValue
 		return ret
 	}
 	return *o.Links
@@ -60,7 +60,7 @@ func (o *CustomDomain) GetLinks() LinksHATEOAS {
 
 // GetLinksOk returns a tuple with the Links field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *CustomDomain) GetLinksOk() (*LinksHATEOAS, bool) {
+func (o *CustomDomain) GetLinksOk() (*map[string]LinksHATEOASValue, bool) {
 	if o == nil || IsNil(o.Links) {
 		return nil, false
 	}
@@ -76,8 +76,8 @@ func (o *CustomDomain) HasLinks() bool {
 	return false
 }
 
-// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
-func (o *CustomDomain) SetLinks(v LinksHATEOAS) {
+// SetLinks gets a reference to the given map[string]LinksHATEOASValue and assigns it to the Links field.
+func (o *CustomDomain) SetLinks(v map[string]LinksHATEOASValue) {
 	o.Links = &v
 }
 
