# management/model_notifications_settings_phone_delivery_settings_twilio_syniverse.go
@@ -20,7 +20,7 @@ var _ MappedNullable = &NotificationsSettingsPhoneDeliverySettingsTwilioSynivers
 
 // NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse struct for NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse
 type NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse struct {
-	Links *LinksHATEOAS `json:"_links,omitempty"`
+	Links *map[string]LinksHATEOASValue `json:"_links,omitempty"`
 	// A string that specifies the resource’s unique identifier.
 	Id *string `json:"id,omitempty"`
 	Environment *ObjectEnvironment `json:"environment,omitempty"`
@@ -57,9 +57,9 @@ func NewNotificationsSettingsPhoneDeliverySettingsTwilioSyniverseWithDefaults() 
 }
 
 // GetLinks returns the Links field value if set, zero value otherwise.
-func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) GetLinks() LinksHATEOAS {
+func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) GetLinks() map[string]LinksHATEOASValue {
 	if o == nil || IsNil(o.Links) {
-		var ret LinksHATEOAS
+		var ret map[string]LinksHATEOASValue
 		return ret
 	}
 	return *o.Links
@@ -67,7 +67,7 @@ func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) GetLinks() L
 
 // GetLinksOk returns a tuple with the Links field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) GetLinksOk() (*LinksHATEOAS, bool) {
+func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) GetLinksOk() (*map[string]LinksHATEOASValue, bool) {
 	if o == nil || IsNil(o.Links) {
 		return nil, false
 	}
@@ -83,8 +83,8 @@ func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) HasLinks() b
 	return false
 }
 
-// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
-func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) SetLinks(v LinksHATEOAS) {
+// SetLinks gets a reference to the given map[string]LinksHATEOASValue and assigns it to the Links field.
+func (o *NotificationsSettingsPhoneDeliverySettingsTwilioSyniverse) SetLinks(v map[string]LinksHATEOASValue) {
 	o.Links = &v
 }
 
