# management/model_template_content_sms.go
@@ -19,7 +19,7 @@ var _ MappedNullable = &TemplateContentSMS{}
 
 // TemplateContentSMS struct for TemplateContentSMS
 type TemplateContentSMS struct {
-	Links *LinksHATEOAS `json:"_links,omitempty"`
+	Links *map[string]LinksHATEOASValue `json:"_links,omitempty"`
 	// The template id.
 	Id *string `json:"id,omitempty"`
 	// The time the resource was created.
@@ -60,9 +60,9 @@ func NewTemplateContentSMSWithDefaults() *TemplateContentSMS {
 }
 
 // GetLinks returns the Links field value if set, zero value otherwise.
-func (o *TemplateContentSMS) GetLinks() LinksHATEOAS {
+func (o *TemplateContentSMS) GetLinks() map[string]LinksHATEOASValue {
 	if o == nil || IsNil(o.Links) {
-		var ret LinksHATEOAS
+		var ret map[string]LinksHATEOASValue
 		return ret
 	}
 	return *o.Links
@@ -70,7 +70,7 @@ func (o *TemplateContentSMS) GetLinks() LinksHATEOAS {
 
 // GetLinksOk returns a tuple with the Links field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *TemplateContentSMS) GetLinksOk() (*LinksHATEOAS, bool) {
+func (o *TemplateContentSMS) GetLinksOk() (*map[string]LinksHATEOASValue, bool) {
 	if o == nil || IsNil(o.Links) {
 		return nil, false
 	}
@@ -86,8 +86,8 @@ func (o *TemplateContentSMS) HasLinks() bool {
 	return false
 }
 
-// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
-func (o *TemplateContentSMS) SetLinks(v LinksHATEOAS) {
+// SetLinks gets a reference to the given map[string]LinksHATEOASValue and assigns it to the Links field.
+func (o *TemplateContentSMS) SetLinks(v map[string]LinksHATEOASValue) {
 	o.Links = &v
 }
 
