# risk/model_risk_predictor_geovelocity.go
@@ -20,7 +20,7 @@ var _ MappedNullable = &RiskPredictorGeovelocity{}
 
 // RiskPredictorGeovelocity struct for RiskPredictorGeovelocity
 type RiskPredictorGeovelocity struct {
-	Links *LinksHATEOAS `json:"_links,omitempty"`
+	Links *map[string]LinksHATEOASValue `json:"_links,omitempty"`
 	// A string that specifies the resource’s unique identifier.
 	Id *string `json:"id,omitempty"`
 	// A string type. A unique, friendly name for the predictor. This name is displayed in the Risk Policies UI, when the admin is asked to define the overrides and weights.
@@ -65,9 +65,9 @@ func NewRiskPredictorGeovelocityWithDefaults() *RiskPredictorGeovelocity {
 }
 
 // GetLinks returns the Links field value if set, zero value otherwise.
-func (o *RiskPredictorGeovelocity) GetLinks() LinksHATEOAS {
+func (o *RiskPredictorGeovelocity) GetLinks() map[string]LinksHATEOASValue {
 	if o == nil || IsNil(o.Links) {
-		var ret LinksHATEOAS
+		var ret map[string]LinksHATEOASValue
 		return ret
 	}
 	return *o.Links
@@ -75,7 +75,7 @@ func (o *RiskPredictorGeovelocity) GetLinks() LinksHATEOAS {
 
 // GetLinksOk returns a tuple with the Links field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *RiskPredictorGeovelocity) GetLinksOk() (*LinksHATEOAS, bool) {
+func (o *RiskPredictorGeovelocity) GetLinksOk() (*map[string]LinksHATEOASValue, bool) {
 	if o == nil || IsNil(o.Links) {
 		return nil, false
 	}
@@ -91,8 +91,8 @@ func (o *RiskPredictorGeovelocity) HasLinks() bool {
 	return false
 }
 
-// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
-func (o *RiskPredictorGeovelocity) SetLinks(v LinksHATEOAS) {
+// SetLinks gets a reference to the given map[string]LinksHATEOASValue and assigns it to the Links field.
+func (o *RiskPredictorGeovelocity) SetLinks(v map[string]LinksHATEOASValue) {
 	o.Links = &v
 }
 
